# cannot-max-rs

./: .gitignore  Cargo.toml  get_maafw.bat  get_maafw.ps1
resource/: config.ron
resource/config/: maa_option.json
resource/maa/image/: name_map.json
resource/maa/pipeline/: ocr_pipeline.json  recognition_pipeline.json
resources/: README.md  monster.csv  monster_greenvine.csv
src/: app.rs  app_controller.rs  auto_fetch.rs  automation.rs  capture.rs  config.rs  core.rs  error.rs  field_recognition.rs  history_match.rs  lib.rs  maa_controller.rs  main.rs  model_scanner.rs  ocr.rs  path_utils.rs  pipeline.rs  prediction.rs  recognition.rs  resources.rs  roster.rs  special_monster.rs  training.rs  types.rs  visualization.rs
src/bridge/: mod.rs  slint_convert.rs
src/engine/: battle_simulator.rs  data_exporter.rs  fetch_state_machine.rs  history.rs  login_navigator.rs  mod.rs  monte_carlo.rs  prediction.rs  recognition.rs  roi_strategy.rs  template_matcher.rs  terrain.rs
src/infra/: capture_provider.rs  config_manager.rs  inference_backend.rs  maa_bridge.rs  mod.rs  resource_manager.rs  storage_manager.rs
src/service/: device_manager.rs  fetch_coordinator.rs  mod.rs  multi_instance.rs
tests/: integration_test.rs
ui/: app-window.slint  common.slint  control-panel.slint  history-panel.slint  input-panel.slint  predict-panel.slint  recognition-panel.slint  roi-selection-window.slint
