[package]
name = "cannot-max-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.14.0", features = ["image"] }
serde = { version = "1.0", features = ["derive"] }
ron = "0.12"
dirs = "6.0"
csv = "1.3"
image = "0.25"
serde_json = "1.0"
window-enumerator = "0.4.1"
windows-capture = "2.0.0"
maa-framework = { version = "1.16.0", default-features = false, features = ["toolkit", "adb", "win32", "image", "dynamic"] }
candle-core = "0.10"
candle-nn = "0.10"
ndarray = { version = "0.16", features = ["serde"] }
rand = "0.9"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
	"Win32_Foundation",
	"Win32_Security",
	"Win32_System_Threading",
	"Win32_UI_Shell",
	"Win32_UI_WindowsAndMessaging",
] }
