[package]
name = "cannot-max-rs"
version = "0.0.1"
edition = "2024"
description = "CannotMax - Arknights battle prediction tool"

[dependencies]
slint = "1.16"
serde = { version = "1", features = ["derive"] }
ron = "0.12"
serde_json = "1"
candle-core = "0.10"
candle-nn = "0.10"
safetensors = "0.7"
image = "0.25"
imageproc = "0.26"
ndarray = "0.17"
maa-framework = { version = "1", features = ["image"] }
rayon = "1.12"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
csv = "1"

[build-dependencies]
slint-build = "1.16"

[profile.release]
codegen-units = 1
lto = true
